<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ResourceName">modModuleMVVM</string>
    <string name="query_weather" tools:ignore="ResourceName">查询杭州天气</string>
    <string name="city" tools:ignore="ResourceName">城市：</string>
    <string name="city_id" tools:ignore="ResourceName">城市ID：</string>
    <string name="temperature" tools:ignore="ResourceName">温度：</string>
    <string name="tilde" tools:ignore="ResourceName">~</string>
    <string name="weather" tools:ignore="ResourceName">天气：</string>
    <string name="release_time" tools:ignore="ResourceName">发布时间：</string>
    <string name="query_failure" tools:ignore="ResourceName">查询失败，请检查网络后重试~</string>
</resources>
